# JouTakWeb

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.images.yml  docker-compose.local.yml  docker-compose.yml  local-proxy.nginx.conf  pyproject.toml  stack.yml
.github/workflows/: CI.yml  release.yml
.husky/: commit-msg  pre-commit
backend/: AGENTS.md  Dockerfile  docker-entrypoint.sh  manage.py
backend/accounts/: adapters.py  admin.py  apps.py  mfa_adapter.py  token_strategy.py
backend/accounts/api/: errors.py  exception_handlers.py  openapi_params.py  query_params.py  router.py  router_auth.py  router_oauth.py
backend/accounts/services/: account_status.py  auth.py  auth_cookies.py  email_addresses.py  oauth.py  personalization.py  profile.py  sessions.py
backend/accounts/tests/: base.py  test_account_api.py  test_adapters.py  test_auth_api.py  test_exception_handlers.py  test_mfa_api.py  test_oauth_service.py  test_services.py  test_status_oauth_api.py
backend/accounts/transport/: schemas.py
backend/backend/: admin.py  admin_site.py  middleware.py  ratelimiting.py  urls.py
backend/backend/settings/: base.py  dev.py  env.py  prod.py
backend/backend/tests/: test_admin_host_policy.py  test_email_deploy.py  test_health.py  test_maintenance_command.py  test_ratelimiting.py  test_settings_env.py
backend/bff/: __init__.py  apps.py  services.py  urls.py  views.py
backend/bff/tests/: test_views.py
backend/core/: admin.py  apps.py  models.py
backend/core/migrations/: 0001_initial.py  0002_userprofile.py  0003_backfill_legacy_minecraft_nicks.py  0004_session_token_digest.py  0005_usersessiontoken_expires_at.py  0006_userprofile_personalization_origin.py
backend/featureflags/: __init__.py  admin.py  apps.py  hooks.py  models.py  provider.py  registry.py  services.py
backend/featureflags/migrations/: 0001_initial.py  0002_seed_homepage_feature.py  0003_add_feature_group_and_history.py
backend/featureflags/tests/: test_admin.py  test_management_commands.py  (+2 more)
backend/observability/: __init__.py  apps.py  logging.py  setup.py
backend/requirements/: dev.txt  prod.txt  test.txt
docs/: api-conventions.md  architecture.md  frontend-conventions.md  security.md
frontend/: .dockerignore  .gitignore  .lintstagedrc.json  .stylelintrc.json  AGENTS.md  Dockerfile  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  prepare-husky.mjs  vite.config.js
frontend/src/: App.jsx  main.jsx
scripts/: check_deploy_gate.sh  check_frontend_openapi_contracts.py  commitlint.mjs  smoke_stack.py
(+95 files in other folders)
